# fastapi_voice_agent

./: .dockerignore  .gitignore  DEPLOYMENT_STATUS.md  SETUP.md  TASK_7_IMPLEMENTATION_SUMMARY.md  VOICE_SYSTEM_FIXES.md  VOICE_TESTING_CHECKLIST.md  test_language_filtering_logic.py
deployment/: DEPLOYMENT.md
docs/: DOMAIN_BOT_QUICK_REFERENCE.md  MQTT_DOMAIN_BOT_USAGE.md  MQTT_FLOW_DIAGRAM.md  MQTT_INTEGRATION_GUIDE.md  MQTT_IOT_ARCHITECTURE.md  MQTT_QUICK_START.md  README.md  TOY_VS_FRONTEND_COMPARISON.md  WEB_API_INTEGRATION.md
fastapi_server/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
fastapi_server/app/: main.py
fastapi_server/app/core/: agent_routing.py  config.py  domain_map.py  validation.py
fastapi_server/app/middleware/: __init__.py  request_id.py
fastapi_server/app/providers/: deepgram_elevenlabs_provider.py  disabled_speech_provider.py  speech_provider.py
fastapi_server/app/routers/: agent.py  health.py  mqtt_bridge.py  voice.py
fastapi_server/app/schemas/: agent.py  interaction.py  voice.py
fastapi_server/app/services/: bot_gateway_client.py  llm_handler.py  runtime_clients.py  sentence_buffer_service.py  sse_assembler.py  vector_store_service.py  voice_text_normalizer.py
fastapi_server/tests/: test_bug_verification.py  test_preservation.py  test_system_flow.py  test_voice_language_filtering.py
raspberry_pi/: README.md  setup.sh
scripts/: extract_docx.py  generate_bots.py  generate_ui_bots.py  smoke_chat_bots.py  start_local_domain_bots.ps1  start_multi_bot.ps1  verify_all_agent_domains.py
tests/: README.md  (+1 more)
(+213 files in other folders)
