[project]
name = "fastapi-server"
version = "0.1.0"
description = ""
authors = [
    {name = "harsh gupta",email = "“guptasecularharsh@gmail.com”"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (==0.111)",
    "uvicorn[standard] (==0.30)",
    "sqlalchemy (==2.0)",
    "pydantic (==2.7)",
    "python-dotenv (==1.0)",
    "pymysql (==1.1)",
    "httpx (==0.27)",
    "boto3 (>=1.34,<2.0)",
    "pypdf (>=4.0,<5.0)",
    "python-docx (>=1.1,<2.0)",
    "python-pptx (>=1.0,<2.0)",
    "email-validator (>=2.0,<3.0)",
    "python-multipart (>=0.0.9,<1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
